[gd_scene format=3 uid="uid://bh0an1bffan6f"]

[ext_resource type="Script" uid="uid://bflup6kdewt4g" path="res://Scripts/toolbox.gd" id="1_lxlcj"]
[ext_resource type="Texture2D" uid="uid://bgh1vrywyahh3" path="res://Resources/Sprites/Rarities/toolbox.png" id="2_aud6h"]
[ext_resource type="Theme" uid="uid://d2s335cjhu88y" path="res://Resources/UI/base_theme.tres" id="3_7vbui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lxlcj"]
radius = 171.49344

[node name="Toolbox" type="Area2D" unique_id=2017955405]
script = ExtResource("1_lxlcj")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1367168028]
texture_filter = 1
texture = ExtResource("2_aud6h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2047718094]
shape = SubResource("CircleShape2D_lxlcj")

[node name="PickUpLabel" type="RichTextLabel" parent="." unique_id=1248800681]
texture_filter = 1
offset_left = -128.0
offset_top = -142.0
offset_right = 128.0
offset_bottom = -62.0
theme = ExtResource("3_7vbui")
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 40
text = "Press E to Pick Up"
fit_content = true
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
